--- a/src/app/book/create-book/create-book.component.html
+++ b/src/app/book/create-book/create-book.component.html
@@ -20,6 +20,9 @@
             style="color: red">Mô tả ít nhất 10 ký tự</span>
     </div>
     <button type="submit" (click)="create()"
-            [disabled]="bookForm.invalid" class="btn btn-primary" >Submit</button>
+            [disabled]="bookForm.invalid" class="btn btn-primary" >Thêm sách</button>
+    <button type="button" class="btn btn-success" routerLink="/book">
+      Thoát
+    </button>
   </form>
 </div>
